[project]
name = "learning-langgraph"
version = "0.1.0"
description = "My Learning Repo to practice Langgraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-google-genai>=2.1.5",
    "langgraph>=0.4.8",
]
